# CPP-playground

./: CMakeLists.txt  man.cpp
array/: array.cpp  array.h
helloWorld/: helloWorld.cpp  helloWorld.h
io/: cin.cpp  io.h
pointer/: pointer.cpp  pointer.h
snippet/: array.cpp  array.h
struct/: enum.cpp  struct.cpp  struct.h  union.cpp
variables/: autoExpression.cpp  boolType.cpp  charType.cpp  convertData.cpp  defineConst.cpp  defineVariable.cpp  integers.cpp  reals.cpp  variables.h
